# rust_ev_verifier_console

./: .gitignore  Cargo.toml  README.md  cargo_run_setup.sh  env.example
datasets/: test_report_data.json
src/: extract.rs  logger.rs  main.rs  report.rs  subscriber.rs  verifications.rs
