[package]
name = "rust_ev_verifier_console"
description = "Console application for the E-Voting system of Swiss Post."
authors = ["Denis Morel"]
edition = "2021"
rust-version = "1.81"
repository = "https://github.com/de-mo/rust_ev_verifier_console"
version = "0.2.2"
license = "Apache-2.0"
readme = "README.md"
categories = ["cryptography", "mathematics"]
keywords = ["math", "e-voting", "crypto"]

[dependencies]
#rust_ev_verifier_lib = { version = "0.2.2" }
rust_ev_verifier_lib = { path = "../rust_ev_verifier_lib" }
#rust_ev_verifier_application_lib = { version = "0.2.2" }
rust_ev_verifier_application_lib = { path = "../rust_ev_verifier_lib/crate_application_lib" }
anyhow = "1"
lazy_static = "1"
structopt = "0.3"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
futures = "0.3"

[target.'cfg(not(target_os = "windows"))'.dependencies]
#rust_ev_verifier_lib = { version = "0.2.2", features = ["gmpmee"] }
rust_ev_verifier_lib = { path = "../rust_ev_verifier_lib", features = [
    "gmpmee",
] }
